@@ -6,7 +6,6 @@ if [ $# -lt 2 ]; then
 fi
 
 SIM_HOME=$(pwd)
-MODEL_PROP=$SIM_HOME/paramFiles/model.properties
 GPML_HOME=$SIM_HOME/../gpml
 
 if [ ! -e "${GPML_HOME}" ]; then
@@ -29,7 +28,7 @@ run_cmd(){
 run_cmd "python3 scripts/transaction_graph_generator.py ${CONF_JSON} ${SIMULATION_NAME} ${EDGE_RATIO}"
 
 # scripts/run_AMLSim.sh
-run_cmd "java -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=2 -Dsimulation_name=${SIMULATION_NAME} -Xms2g -Xmx4g -cp jars/*:bin amlsim.AMLSim ${CONF_JSON} ${MODEL_PROP}"
+run_cmd "SIMULATION_NAME=${SIMULATION_NAME} sh scripts/run_AMLSim.sh ${CONF_JSON}"
 
 # scripts/convert_logs.py
 run_cmd "python3 scripts/convert_logs.py ${CONF_JSON} ${SIMULATION_NAME}"
@@ -43,4 +42,3 @@ run_cmd "python3 scripts/visualize/plot_distributions.py ${CONF_JSON} ${SIMULATI
 run_cmd "cd $GPML_HOME"
 
 run_cmd "sh scripts/run_from_amlsim.sh $SIM_HOME $SIM_HOME/$CONF_JSON data/$SIMULATION_NAME $SIMULATION_NAME"
-
